--- a/Controls/Node/NodeButton.xaml
+++ b/Controls/Node/NodeButton.xaml
@@ -2,105 +2,60 @@
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:c="clr-namespace:MultiBranchTexter.Controls"
-            Width="100" Loaded="NodeBase_Loaded"
+            MinWidth="100" Loaded="NodeBase_Loaded"
             MouseDoubleClick="NodeBase_MouseDoubleClick"
             HorizontalAlignment="Left" VerticalAlignment="Top">
-    <c:NodeBase.Template>
-        <ControlTemplate TargetType="{x:Type c:NodeBase}">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Border x:Name="bgBorder" Grid.Row="0"
+                Tag="Normal"
+                HorizontalAlignment="Center"
+                MouseLeftButtonDown="NodeButton_MouseLeftButtonDown"
+                MouseMove="NodeButton_MouseMove"
+                MouseLeftButtonUp="NodeButton_MouseLeftButtonUp"
+                MouseWheel="NodeButton_MouseWheel"
+                CornerRadius="4"
+                Style="{StaticResource nodebuttonBorderStyle}">
+            <Border.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="删除节点" Click="DeleteNode_Click"/>
+                    <MenuItem Header="变更后继节点">
+                        <MenuItem Header="单一后继" Click="ChangeEnd_Click"/>
+                        <MenuItem Header="判断后继" Click="ChangeEnd_Click"/>
+                        <MenuItem Header="多选后继" Click="ChangeEnd_Click"/>
+                    </MenuItem>
+                </ContextMenu>
+            </Border.ContextMenu>
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="18"/>
                 </Grid.RowDefinitions>
-                <Border x:Name="bgBorder" Grid.Row="0"
-                        Background="{DynamicResource NodeBgBrush}" 
-                        BorderBrush="{DynamicResource ThemeBrush}"
-                        MouseLeftButtonDown="NodeButton_MouseLeftButtonDown"
-                        MouseMove="NodeButton_MouseMove"
-                        MouseLeftButtonUp="NodeButton_MouseLeftButtonUp"
-                        MouseWheel="NodeButton_MouseWheel"
-                        BorderThickness="1" CornerRadius="4">
-                    <Border.ContextMenu>
-                        <ContextMenu>
-                            <MenuItem Header="删除节点" Click="DeleteNode_Click"/>
-                            <MenuItem Header="变更后继节点">
-                                <MenuItem Header="单一后继" Click="ChangeEnd_Click"/>
-                                <MenuItem Header="判断后继" Click="ChangeEnd_Click"/>
-                                <MenuItem Header="多选后继" Click="ChangeEnd_Click"/>
-                            </MenuItem>
-                        </ContextMenu>
-                    </Border.ContextMenu>
-                    <Grid Width="80" Height="40">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
-                            <RowDefinition Height="16"/>
-                        </Grid.RowDefinitions>
-                        <Rectangle Grid.Row="0"
-                                   Margin="1"
-                                   VerticalAlignment="Bottom" Fill="Gray" Height="2"/>
-                        <TextBox x:Name="titleBox" Margin="1" Grid.Row="0"
-                                 Focusable="False" Background="Transparent"
-                                 PreviewMouseDoubleClick="TitleBox_PreviewMouseDoubleClick"
-                                 LostFocus="TitleBox_LostFocus"/>
-                        <Button x:Name="gotoBtn" Grid.Row="1"
-                                Margin="8,-2,8,-4" Tag="f"
-                                Template="{DynamicResource generalButtonTemplate}" 
-                                Click="GotoBtn_Click"
-                                Content="M0,0 0,10 8,5Z"/>
-                    </Grid>
-                </Border>
+                <Rectangle Grid.Row="0" Margin="1" Height="2"
+                           VerticalAlignment="Bottom" Fill="Gray"/>
+                <TextBox x:Name="titleBox" Margin="1" Grid.Row="0"
+                         Focusable="False" Background="Transparent"
+                         PreviewMouseDoubleClick="TitleBox_PreviewMouseDoubleClick"
+                         LostFocus="TitleBox_LostFocus"/>
+                <Button x:Name="gotoBtn" Grid.Row="1"
+                        Margin="8,-2,8,-4" Tag="f"
+                        Template="{StaticResource generalButtonTemplate}" 
+                        Click="GotoBtn_Click"
+                        Content="M0,0 0,10 8,5Z"/>
                 <!--等待点击-->
-                <Border x:Name="UpperBd" Background="#FFB2E4E4" Grid.Row="0" Opacity="0.9"
-                        MouseDown="UpperBd_MouseDown" CornerRadius="4"
-                        Visibility="Hidden">
+                <Border x:Name="UpperBd" Background="#FFB2E4E4" Grid.RowSpan="2" 
+                        Opacity="0.9" MouseDown="UpperBd_MouseDown" CornerRadius="4"
+                        Margin="-8,-2,-8,-2" Visibility="Hidden">
                     <TextBlock Text="点击以设置为&#x000A;新的后继节点" IsHitTestVisible="False"
                                HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 </Border>
-                <!--尾巴放置容器-->
-                <Border x:Name="endContainer" Grid.Row="1"/>
             </Grid>
-            
-            <ControlTemplate.Triggers>
-                <Trigger Property="IsMouseOver" Value="True" SourceName="bgBorder">
-                    <Setter Property="Background" Value="{DynamicResource NodeBgHBrush}" TargetName="bgBorder"/>
-                </Trigger>
-                <Trigger Property="NodeState" Value="Selected">
-                    <Setter Property="BorderBrush" Value="Red" TargetName="bgBorder"/>
-                    <Setter Property="BorderThickness" Value="2" TargetName="bgBorder"/>
-                    <Setter Property="Effect" TargetName="bgBorder">
-                        <Setter.Value>
-                            <DropShadowEffect ShadowDepth="0"
-                                              Color="Red"
-                                              Opacity="1"
-                                              BlurRadius="10"/>
-                        </Setter.Value>
-                    </Setter>
-                </Trigger>
-                <Trigger Property="NodeState" Value="Searched">
-                    <Setter Property="BorderBrush" Value="Orange" TargetName="bgBorder"/>
-                    <Setter Property="BorderThickness" Value="2" TargetName="bgBorder"/>
-                    <Setter Property="Effect" TargetName="bgBorder">
-                        <Setter.Value>
-                            <DropShadowEffect ShadowDepth="0"
-                                              Color="{DynamicResource Theme}"
-                                              Opacity="1"
-                                              BlurRadius="10"/>
-                        </Setter.Value>
-                    </Setter>
-                </Trigger>
-                <Trigger Property="NodeState" Value="TopSearched">
-                    <Setter Property="BorderBrush" Value="Blue" TargetName="bgBorder"/>
-                    <Setter Property="BorderThickness" Value="2" TargetName="bgBorder"/>
-                    <Setter Property="Effect" TargetName="bgBorder">
-                        <Setter.Value>
-                            <DropShadowEffect ShadowDepth="0"
-                                              Color="{DynamicResource Theme}"
-                                              Opacity="1"
-                                              BlurRadius="10"/>
-                        </Setter.Value>
-                    </Setter>
-                </Trigger>
-            </ControlTemplate.Triggers>
-        </ControlTemplate>
-    </c:NodeBase.Template>
+        </Border>
+
+        <!--尾巴放置容器-->
+        <Border x:Name="endContainer" Grid.Row="1"/>
+    </Grid>
 </c:NodeBase>
