--- a/Controls/Node/NodeEndYesNo.xaml
+++ b/Controls/Node/NodeEndYesNo.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:c="clr-namespace:MultiBranchTexter.Controls"
-             Loaded="NodeBase_Loaded" Width="80">
+             Loaded="NodeBase_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -26,9 +26,11 @@
         </Border>
         <c:NodeBase x:Name="yesNode" Template="{DynamicResource yesnoAnswerTemplate}" 
                     Grid.Row="1" Grid.Column="0"
+                    HorizontalAlignment="Center" Width="40"
                     MouseDoubleClick="YesnoNode_MouseDoubleClick"/>
         <c:NodeBase x:Name="noNode" Template="{DynamicResource yesnoAnswerTemplate}"
                     Grid.Row="1" Grid.Column="1"
+                    HorizontalAlignment="Center" Width="40"
                     MouseDoubleClick="YesnoNode_MouseDoubleClick"/>
     </Grid>
 
