--- a/Resources/WindowResources.xaml
+++ b/Resources/WindowResources.xaml
@@ -19,7 +19,7 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="MainBorder" Property="Background" Value="{DynamicResource Highlight.ThemeBrush}"/>
+                            <Setter TargetName="MainBorder" Property="Background" Value="{StaticResource Highlight.ThemeBrush}"/>
                         </Trigger>
                         <Trigger Property="IsPressed" Value="True">
                             <Setter Property="Opacity" Value="0.8"/>
@@ -29,7 +29,7 @@
                                 <Condition Property="IsMouseOver" Value="True"/>
                                 <Condition Property="Name" Value="CloseWinButton"/>
                             </MultiTrigger.Conditions>
-                            <Setter TargetName="MainBorder" Property="Background" Value="{DynamicResource RedBrush}"/>
+                            <Setter TargetName="MainBorder" Property="Background" Value="{StaticResource RedBrush}"/>
                         </MultiTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -55,7 +55,7 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="MainBorder" Property="Background" Value="{DynamicResource Highlight.ThemeBrush}"/>
+                            <Setter TargetName="MainBorder" Property="Background" Value="{StaticResource Highlight.ThemeBrush}"/>
                         </Trigger>
                         <Trigger Property="IsPressed" Value="True">
                             <Setter Property="Opacity" Value="0.8"/>
@@ -82,7 +82,7 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Border x:Name="TrueBd" BorderBrush="{DynamicResource Foreground.ThemeBrush}"
-                    BorderThickness="2" Background="{DynamicResource MiddleBrush}"
+                    BorderThickness="2" Background="{StaticResource MiddleBrush}"
                     Margin="4"/>
             <ContentPresenter Grid.Column="1" TextElement.Foreground="{DynamicResource Foreground.ThemeBrush}" 
                               Content="{TemplateBinding Content}" VerticalAlignment="Center"/>
@@ -123,7 +123,7 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type RepeatButton}">
-                            <Border Background="{DynamicResource MiddleBrush}"
+                            <Border Background="{StaticResource MiddleBrush}"
                                     CornerRadius="0,3,3,0" BorderThickness="0,1,1,1"
                                     BorderBrush="{TemplateBinding Foreground}"/>
                         </ControlTemplate>
