--- a/Controls/Node/NodeButton.xaml
+++ b/Controls/Node/NodeButton.xaml
@@ -2,7 +2,7 @@
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:c="clr-namespace:MultiBranchTexter.Controls"
-            MinWidth="100" Loaded="NodeBase_Loaded"
+            Loaded="NodeBase_Loaded"
             MouseDoubleClick="NodeBase_MouseDoubleClick"
             HorizontalAlignment="Left" VerticalAlignment="Top">
     <Grid>
@@ -11,7 +11,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Border x:Name="bgBorder" Grid.Row="0"
-                Tag="Normal"
+                Tag="Normal" MinWidth="100" 
                 HorizontalAlignment="Center"
                 MouseLeftButtonDown="NodeButton_MouseLeftButtonDown"
                 MouseMove="NodeButton_MouseMove"
@@ -40,8 +40,8 @@
                          Focusable="False" Background="Transparent"
                          PreviewMouseDoubleClick="TitleBox_PreviewMouseDoubleClick"
                          LostFocus="TitleBox_LostFocus"/>
-                <Button x:Name="gotoBtn" Grid.Row="1"
-                        Margin="8,-2,8,-4" Tag="f"
+                <Button x:Name="gotoBtn" Grid.Row="1" MaxWidth="80"
+                        Margin="16,-2,16,-4" Tag="f"
                         Template="{StaticResource generalButtonTemplate}" 
                         Click="GotoBtn_Click"
                         Content="M0,0 0,10 8,5Z"/>
