修改注释显示策略

--- a/Controls/TextTab/TextFragmentPresenter.xaml
+++ b/Controls/TextTab/TextFragmentPresenter.xaml
@@ -7,7 +7,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="commentContainer" Grid.Row="0" Height="2"
+        <TextBox x:Name="commentContainer" Grid.Row="0"
                  Text="{Binding CommentText,
             Mode=TwoWay,
             NotifyOnTargetUpdated=True,
